--- a/bespoke-interior-solutions-bangalore.html
+++ b/bespoke-interior-solutions-bangalore.html
@@ -10155,7 +10155,11 @@
                                 <h2 class="kitchen-blog__section-title">Customizing Furniture for Functionality and
                                     Style</h2>
                                 <p class="kitchen-blog__paragraph">In Bangalore, where space can be limited, custom
-                                    furniture helps maximize the use of every inch. Customized furniture is crafted to
+                                    furniture helps maximize the use of every inch. 
+                                    <a href="./residential_and_commercial_interior_designers.html">
+                                        Customized furniture
+                                    </a>
+                                    is crafted to
                                     fit exact room dimensions, blending style and practicality. Whether you need a
                                     spacious desk for a home office or a compact unit for a living room, tailor-made
                                     pieces offer flexibility and functionality.
@@ -10200,8 +10204,15 @@
                                     design spaces that are both beautiful and functional.
 
                                     <br>
-                                    Whether seeking a statement sofa or space-saving storage, tailored furniture
-                                    solutions offer limitless possibilities. A living room featuring bold colors with
+                                    Whether seeking a statement sofa or space-saving storage, 
+                                    <span style="color: #c05833;">
+                                        <a href="./customized_interior_design_and_furniture_projects.html">
+                                            tailored furniture
+                                    solutions
+                                        </a>
+                                        
+                                    </span>
+                                    offer limitless possibilities. A living room featuring bold colors with
                                     sleek, personalized furniture is both striking and comfortable. By partnering with
                                     furniture makers in Bangalore, homeowners ensure that each custom piece fits
                                     perfectly into their space.
