--- a/custom-interior-design-solutions.html
+++ b/custom-interior-design-solutions.html
@@ -10167,7 +10167,13 @@
                                     right design enhances aesthetic appeal while improving employee morale and
                                     efficiency. At En-decor, we understand the importance of creating commercial
                                     interior designs that are both functional and inspiring. Whether you’re looking for
-                                    affordable interior design or a luxurious office makeover, our expert team offers
+                                    
+                                    <span style="color: #be5933;">
+                                        <a href="./residential_and_commercial_interior_designers.html">
+                                            affordable interior design
+                                        </a>
+                                    </span>
+                                    or a luxurious office makeover, our expert team offers
                                     solutions that are as practical as they are stylish.</p>
                             </div>
 
@@ -10208,7 +10214,12 @@
                             <div class="kitchen-blog__content-wrapper">
                                 <h2 class="kitchen-blog__section-title">Design Consultancies Tailored to Your Needs</h2>
                                 <p class="kitchen-blog__paragraph">At En-decors Interiors, we offer interior design
-                                    services that cater to your specific needs. Our team of expert interior designers
+                                    services that cater to your specific needs. Our team of 
+                                    <span style="color: #c05833;">
+                                        <a href="./customized_interior_design_and_furniture_projects.html">
+                                            expert interior designers
+                                        </a>
+                                    </span>
                                     works closely with you to understand your requirements and create personalized
                                     solutions. From home interiors to office interiors, we provide expert guidance on
                                     design aesthetics, color schemes, lighting, furniture, and interior selection,
