--- a/custom-made-kitchen-interiors.html
+++ b/custom-made-kitchen-interiors.html
@@ -10130,7 +10130,14 @@
                             <div class="kitchen-blog__content-wrapper">
                                 <h2 class="kitchen-blog__section-title">Maximize Space with Custom Furniture</h2>
                                 <p class="kitchen-blog__paragraph">In smaller kitchens, maximizing space is crucial. Our
-                                    Bespoke furniture solutions provide the perfect solution by tailoring each element
+                                    
+                                    <span style="color: #c05833;">
+                                        <a href="./residential_and_commercial_interior_designers.html">
+                                            Bespoke furniture solutions
+                                        </a>
+
+                                    </span>
+                                    provide the perfect solution by tailoring each element
                                     to fit your unique space. Custom cabinets, deeper drawers, and corner units can make
                                     use of otherwise wasted space. Additionally, cabinets that extend up to the ceiling
                                     can maximize vertical space.</p>
@@ -10172,7 +10179,11 @@
                             <div class="kitchen-blog__content-wrapper">
                                 <h2 class="kitchen-blog__section-title">Tailored Storage Solutions</h2>
                                 <p class="kitchen-blog__paragraph">Storage is one of the most important considerations
-                                    when designing a kitchen. Custom furniture solutions can provide tailored storage
+                                    when designing a kitchen. 
+                                    <span style="color: #c05833;">
+                                        <a href="./customized_interior_design_and_furniture_projects.html">Custom furniture solutions</a>
+                                    </span>
+                                    can provide tailored storage
                                     that meets your exact needs. If you need more space for pots, pans, or small
                                     appliances, made-to-order furniture in Bangalore offers custom options like pull-out
                                     pantry systems, adjustable shelving, and drawer organizers. For example, drawers
