--- a/index.html
+++ b/index.html
@@ -10537,8 +10537,21 @@ Who We Are - Turning Concepts into Captivating Spaces
                           </h1>
                         </div>
                         <p>
-                          EN-DECOR INTERIORS is a leading and best interior design firm with its headquarters in Bangalore, recognized as a top choice across India. We offer a comprehensive solution for all your interior design needs, whether for residential spaces in Bangalore or commercial projects. As dreamers, visualizers, planners, and decorators, we are dedicated to transforming your space using contemporary design concepts.
-                          Our expertise in interior design enables us to create meticulously detailed environments that embody your vision. By understanding your unique needs, we craft impeccable spaces that bring your dreams to life - because our clients, like you, are our top priority.
+                          EN-DECOR INTERIORS is a leading and best interior design firm with its headquarters in Bangalore, recognized as a top choice across India. We offer a comprehensive solution for all your interior design needs, whether for 
+                          <span style="color: #be5933;">
+                            <a href="./residential_and_commercial_interior_designers.html">
+                              residential spaces in Bangalore
+                            </a>
+                          </span>
+                          or commercial projects. As dreamers, visualizers, planners, and decorators, we are dedicated to transforming your space using contemporary design concepts.
+                          Our expertise in 
+                          <span>
+                            <a href="./leading_interior_design_company.html">
+                              interior design
+                            </a>
+                          </span>
+
+                          enables us to create meticulously detailed environments that embody your vision. By understanding your unique needs, we craft impeccable spaces that bring your dreams to life - because our clients, like you, are our top priority.
                         </p>
                         <!-- <button class="btn button border text-white bg-[#cd5225] hover:bg-white hover:text-[#cd5225] hover:border-[#cd5225] mt-2 transition-all duration-300 ease-in-out">
                           <a href="./leading_interior_design_company.html" style="text-decoration: none; color: inherit; font-weight: bold;">Learn More</a>
