fix in internal link color

--- a/index.html
+++ b/index.html
@@ -10545,7 +10545,7 @@ Who We Are - Turning Concepts into Captivating Spaces
                           </span>
                           or commercial projects. As dreamers, visualizers, planners, and decorators, we are dedicated to transforming your space using contemporary design concepts.
                           Our expertise in 
-                          <span>
+                          <span style="color: #be5933;">
                             <a href="./leading_interior_design_company.html">
                               interior design
                             </a>
