--- a/leading_interior_design_company.html
+++ b/leading_interior_design_company.html
@@ -10352,9 +10352,9 @@
                         <div class="et_pb_module et_pb_text et_pb_text_1 et_pb_text_align_left et_pb_bg_layout_light">
                           <div class="et_pb_text_inner">
                             <p class="pt-10" style="font-size: 11px;">
-                              At EN-DECOR Interiors, headquartered in Bangalore, we are proud to be one of India’s leading interior design firms, 
+                              At EN-DECOR Interiors, headquartered in Bangalore, we are proud to be one of India’s leading interior design firms, specializing in both
                               <span style="color: #be5933;">
-                                <a href="./custom-interior-design-solutions.html">specializing in both residential and commercial interiors.</a>
+                                <a href="./custom-interior-design-solutions.html"> residential and commercial interiors.</a>
                               </span>
                                With a reputation for delivering exceptional turnkey solutions, we manage every aspect of the design journey - from conceptualization to flawless execution, ensuring a seamless and stress-free experience for our clients. Known for our dedication to quality and accessible luxury, we create sophisticated, functional spaces that perfectly reflect each client’s unique vision. Our services are backed by an unconditional one-year warranty, demonstrating our commitment to excellence and outstanding after-sales support. Whether transforming homes or designing dynamic commercial spaces, EN-DECOR Interiors blends innovation, practicality, and unmatched attention to detail to redefine spaces. Whether you need residential interior designers or 
                                <span style="color: #be5933;">
