fix on another internal links

--- a/bespoke-interior-solutions-bangalore.html
+++ b/bespoke-interior-solutions-bangalore.html
@@ -10156,9 +10156,11 @@
                                     Style</h2>
                                 <p class="kitchen-blog__paragraph">In Bangalore, where space can be limited, custom
                                     furniture helps maximize the use of every inch. 
+                                   <span style="color: #c05833;">
                                     <a href="./residential_and_commercial_interior_designers.html">
                                         Customized furniture
                                     </a>
+                                   </span>
                                     is crafted to
                                     fit exact room dimensions, blending style and practicality. Whether you need a
                                     spacious desk for a home office or a compact unit for a living room, tailor-made
