--- a/index.html
+++ b/index.html
@@ -9883,7 +9883,7 @@
           <!-- Form Section -->
           <div class="w-full my-auto md:w-1/2 p-6">
             <h2 class="text-xl font-bold text-gray-800 text-center mb-4">Book A Free Consultation</h2>
-            <form  id="contactForm" action="https://formsubmit.co/vish9829216@gmail.com" method="POST" class="space-y-6">
+            <form  id="contactForm" action="https://formsubmit.co/endecor.interiors@gmail.com" method="POST" class="space-y-6">
               <!-- Email Field -->
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_subject" value="New Form Submission">
